--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,11 @@
         android:layout_height="wrap_content"/>
 
     <FrameLayout
-        android:id="@+id/fragent_default"
+        android:id="@+id/fragment_default"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
