--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="color_general">#2f2db2</color>
+    <color name="color_general_text">#ffffff</color>
+    <color name="color_general_light">#ffffff</color>
+
 </resources>
