--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:text="my Title"
             android:textColor="#ffffff"
             android:textSize="18sp" />
@@ -27,12 +27,11 @@
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="right"
-        android:layout_marginRight="5dp"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/logo_blanco_esri" />
+        app:srcCompat="@drawable/logo_blanco_esri" />
 
 </RelativeLayout>
