--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#5e6cb9</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="color_general">#2f2db2</color>
     <color name="color_general_text">#ffffff</color>
     <color name="color_general_light">#ffffff</color>
+
+    <!-- Progress bar-->
+    <color name="color_preloader_center">#44d45f</color>
+    <color name="color_preloader_end">#fff</color>
+    <color name="color_preloader_start">#44d45f</color>
+
+    <!--Color-->
+    <color name="transparent">#00000000</color>
 
 </resources>
