--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="color_general_text">#ffffff</color>
     <color name="color_general_light">#ffffff</color>
 
+    <color name="colorLocationButton">#495fd6</color>
+
     <!-- Progress bar-->
     <color name="color_preloader_center">#44d45f</color>
     <color name="color_preloader_end">#fff</color>
