se agregan popups, tambien seleccion de capas en el mapa

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="color_black">#000000</color>
+
     <color name="color_general">#2f2db2</color>
     <color name="color_general_text">#ffffff</color>
     <color name="color_general_light">#ffffff</color>
