--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -84,11 +85,8 @@
                     <ImageButton
                         android:id="@+id/myLocationButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/colorLocationButton"
+                        android:layout_height="wrap_content"
+                        android:background="@color/color_general"
                         android:onClick="onClick"
                         android:src="@drawable/mapa_ubicacion" />
                 </LinearLayout>
@@ -103,6 +101,141 @@
                 android:layout_alignWithParentIfMissing="false"
                 android:gravity="bottom|center_horizontal">
                 <!-- ACA VAN los popups, y el activador de capas-->
+
+                <LinearLayout
+                    android:id="@+id/first"
+                    android:layout_width="200dp"
+                    android:layout_height="55dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/color_general_light"
+                    android:orientation="horizontal"
+                    android:padding="2dp"
+                    android:weightSum="3">
+
+                    <ImageButton
+                        android:id="@+id/botonParqueaderos"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/radiobutton_off_background"
+                        android:backgroundTint="@color/transparent"
+                        android:padding="1dp"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/pin_parqueo_selec" />
+
+                    <ImageButton
+                        android:id="@+id/botonHoteles"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/radiobutton_off_background"
+                        android:backgroundTint="@color/transparent"
+                        android:padding="1dp"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/pin_hoteles_selec" />
+
+                    <ImageButton
+                        android:id="@+id/botonRestaurantes"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/radiobutton_off_background"
+                        android:backgroundTint="@color/transparent"
+                        android:padding="1dp"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/pin_restaurantes_selec" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/contentPopup"
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_general_light"
+                    android:clickable="true"
+                    android:orientation="vertical"
+                    android:paddingBottom="60dp"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="10dp">
+
+                        <TextView
+                            android:id="@+id/categoria"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="TextView"
+                            android:textColor="@color/color_general_light" />
+
+                        <ImageButton
+                            android:id="@+id/closePopup"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@android:drawable/screen_background_light_transparent"
+                            android:src="@android:drawable/ic_menu_close_clear_cancel" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.55"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="5dp">
+
+                            <TextView
+                                android:id="@+id/lugar"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="TextView"
+                                android:textSize="18dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/direccion"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="TextView" />
+
+                            <ImageButton
+                                android:id="@+id/btnAumentedR"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@android:drawable/progress_horizontal"
+                                android:src="@android:drawable/presence_video_online" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.45"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/fotoLugar"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:scaleType="centerCrop"
+                                android:src="@mipmap/slideruno" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </RelativeLayout>
         </RelativeLayout>
