--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -101,7 +101,6 @@
                 android:layout_alignWithParentIfMissing="false"
                 android:gravity="bottom|center_horizontal">
                 <!-- ACA VAN los popups, y el activador de capas-->
-
                 <LinearLayout
                     android:id="@+id/first"
                     android:layout_width="200dp"
@@ -111,6 +110,7 @@
                     android:background="@color/color_general_light"
                     android:orientation="horizontal"
                     android:padding="2dp"
+                    android:visibility="visible"
                     android:weightSum="3">
 
                     <ImageButton
