--- a/app/src/main/res/menu/activity_ar_drawer.xml
+++ b/app/src/main/res/menu/activity_ar_drawer.xml
@@ -5,10 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
+            android:id="@+id/nav_layers"
+            android:icon="@drawable/ic_menu_layers"
+            android:title="@string/txt_menu_layer" />
+       <!-- <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Gallery" />
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Tools" />-->
     </group>
 
     <item android:title="Communicate">
