correccion de muestra de mapa, puntos aun no funcionan

--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -96,7 +96,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/mapView"
+                android:layout_alignTop="@+id/mapView"
                 android:layout_alignRight="@+id/mapView"
                 android:layout_alignWithParentIfMissing="false"
                 android:gravity="bottom|center_horizontal">
