--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -84,11 +84,58 @@
 
                     <ImageButton
                         android:id="@+id/myLocationButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/color_general"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:onClick="onClick"
-                        android:src="@drawable/mapa_ubicacion" />
+                        android:src="@drawable/arcgisruntime_location_display_compass_symbol" />
+
+                    <ImageButton
+                        android:id="@+id/layersButton"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/ic_menu_layers" />
+
+                    <LinearLayout
+                        android:id="@+id/first"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/color_general_light"
+                        android:orientation="vertical"
+                        android:padding="2dp"
+                        android:visibility="gone"
+                        android:weightSum="3"
+                        tools:ignore="UnknownId">
+
+                        <ImageButton
+                            android:id="@+id/botonParqueaderos"
+                            android:layout_width="40dp"
+                            android:layout_height="60dp"
+                            android:layout_weight="1"
+                            android:background="@android:drawable/screen_background_dark_transparent"
+                            android:backgroundTint="@color/transparent"
+                            android:scaleType="fitCenter"
+                            android:src="@mipmap/pin_parqueo_selec" />
+
+                        <ImageButton
+                            android:id="@+id/botonHoteles"
+                            android:layout_width="40dp"
+                            android:layout_height="60dp"
+                            android:layout_weight="1"
+                            android:background="@android:drawable/screen_background_dark_transparent"
+                            android:backgroundTint="@color/transparent"
+                            android:scaleType="fitCenter"
+                            android:src="@mipmap/pin_hoteles_selec" />
+
+                        <ImageButton
+                            android:id="@+id/botonRestaurantes"
+                            android:layout_width="40dp"
+                            android:layout_height="60dp"
+                            android:layout_weight="1"
+                            android:background="@android:drawable/screen_background_dark_transparent"
+                            android:backgroundTint="@color/transparent"
+                            android:scaleType="fitCenter"
+                            android:src="@mipmap/pin_restaurantes_selec" />
+                    </LinearLayout>
                 </LinearLayout>
 
             </FrameLayout>
@@ -101,51 +148,6 @@
                 android:layout_alignWithParentIfMissing="false"
                 android:gravity="bottom|center_horizontal">
                 <!-- ACA VAN los popups, y el activador de capas-->
-                <LinearLayout
-                    android:id="@+id/first"
-                    android:layout_width="200dp"
-                    android:layout_height="55dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="5dp"
-                    android:background="@color/color_general_light"
-                    android:orientation="horizontal"
-                    android:padding="2dp"
-                    android:visibility="visible"
-                    android:weightSum="3">
-
-                    <ImageButton
-                        android:id="@+id/botonParqueaderos"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/screen_background_dark_transparent"
-                        android:backgroundTint="@color/transparent"
-                        android:padding="1dp"
-                        android:scaleType="fitCenter"
-                        android:src="@mipmap/pin_parqueo_selec" />
-
-                    <ImageButton
-                        android:id="@+id/botonHoteles"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/screen_background_dark_transparent"
-                        android:backgroundTint="@color/transparent"
-                        android:padding="1dp"
-                        android:scaleType="fitCenter"
-                        android:src="@mipmap/pin_hoteles_selec" />
-
-                    <ImageButton
-                        android:id="@+id/botonRestaurantes"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/screen_background_dark_transparent"
-                        android:backgroundTint="@color/transparent"
-                        android:padding="1dp"
-                        android:scaleType="fitCenter"
-                        android:src="@mipmap/pin_restaurantes_selec" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/contentPopup"
