--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     <color name="transparent">#00000000</color>
 
     <color name="color_parqu_ar">#0080FF</color>
+    <color name="color_res_ar">#44d45f</color>
 
 </resources>
